# partial_order_alignment

./: .gitignore  Cargo.toml  README.md  log  log2
benches/: bench.rs
src/: base.rs  config.rs  forward.rs  gen_sample.rs  generate.rs  lib.rs  multipse_sequence_alignment.rs  remove_nodes.rs  tests.rs
src/generate/: mod.rs
