[package]
name = "poa_hmm"
version = "0.2.0"
authors = ["ban-m <ban-m@g.ecc.u-tokyo.ac.jp>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
poa_simd = ["packed_simd"]

[dependencies]
rand = "*"
log = "*"
rand_xoshiro = "*"
packed_simd = {version="0.3.3", optional = true}

[dev-dependencies]
rayon = "*"
